# trantor

./: .all-contributorsrc  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yaml  docker_init.sh  sqlx-data.json  trantor.service
client/: package.json  pnpm-lock.yaml
client/src/: app.html
client/src/lib/: api.ts  auth.store.ts  auth.ts  schema.ts  utils.ts
client/src/lib/components/: Chart.svelte  Map.svelte  NoData.svelte  Tabs.svelte
client/src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts  styles.css
client/src/routes/login/: +page.svelte
client/src/routes/trackings/[id]/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
client/src/routes/trackings/[id]/settings/: +page.svelte
controllers/: Cargo.toml
controllers/src/: lib.rs  session_end.rs  session_start.rs
data/: launch-control.js  ua-regexes.yml
domain/: Cargo.toml
domain/src/: entities.rs  lib.rs  ports.rs  utils.rs
main/: Cargo.toml  config.toml
main/src/: config.rs  main.rs  maxmind_reader.rs  ua_parser.rs
migrations/: 20230523083741_init.sql  20230615033651_cascade_delete_tracking.sql  20230615132144_cascade_delete_sources.sql  20230615140002_cascade_delete_visitors.sql  20230617031845_add_location_column_to_sessions_table.sql  20230618040901_add_referrals_column_to_sessions_table.sql  20230623033932_add_columns_for_location_data_on_session_table.sql  20230623074312_add_columns_for_user_agent_data.sql
pg-repositories/: Cargo.toml
pg-repositories/src/: lib.rs
services/: Cargo.toml
services/src/: lib.rs  session_end.rs  session_start.rs
src/: db.rs  errors.rs  lib.rs  main.rs  middleware.rs  utils.rs
src/admin/: filters.rs  handlers.rs  mod.rs
src/middleware/: mod.rs  tracking_id.rs  user_id.rs
src/services/: adapters.rs  mod.rs  models.rs  ports.rs
src/session/: filters.rs  handlers.rs  mod.rs
templates/: home.html
warp-controller/: Cargo.toml
warp-controller/src/: lib.rs  session_start.rs
