[package]
name = "trantor"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
log = "0.4"
ulid = "1"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "chrono",
  "json",
] }
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uaparser = "0.6.0"
