[package]
name = "trantor"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
log = "0.4"
ulid = "1"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "chrono",
  "json",
  "bigdecimal",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uaparser = "0.6.0"
base64 = "0.21"
num-traits = "0.2.15"

[profile.dev.package.sqlx-macros]
opt-level = 3
