[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
uaparser = "0.6.0"
color-eyre = "0.6.2"
maxminddb = "0.23.0"
tokio = { version = "1", features = ["full"] }

domain = { path = "../domain" }
services = { path = "../services" }
controllers = { path = "../controllers" }
pg-repositories = { path = "../pg-repositories" }
