[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.7.4"
uaparser = "0.6.0"
color-eyre = "0.6.2"
maxminddb = "0.23.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

domain = { path = "../domain" }
services = { path = "../services" }
controllers = { path = "../controllers" }
pg-repositories = { path = "../pg-repositories" }
